--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,4 +5,10 @@
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <resource-ref>
+        <description>Reviews Database</description>
+        <res-ref-name>jdbc/yourdb</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
